# amundworks

./: DysonSphere.py  README.md  TANGO_I.py  XOsys.py  amundworks_encryption_library.py  amundworks_game_library.py  amundworks_general_function_library.py  amundworks_mathematics_library.py  aws.gitignore  binary.py  bosoncore.c  cardanos.py  ceasar.py  ctaa.py  ferrari.py  fibonacci.py  fractals.py  id_ed25519  id_ed25519.pub  kabal.py  normaldistribution.py  numguess.py  onetimepad.py  pyblast.py  pycalc.py  quadratic.py  rand_str.py  saver.py  serielån.py  sparingscalc.py  sybau.py  tango_missions.txt  terninger.py  test.c  vigenêre.py
Archive/futureforge_I/: anvilgui.py  fusion_anvil.py
Archive/parabellum_/: systest_v1.py
Archive/tango/: TANGO_I.py  tango_missions.txt  tangocred.txt
C/: csandbox.c
C&CPP/: hangman.cpp
CXX/: CGoL.cpp  Functions.c  hangman.cpp  test.c  test.cpp
Fullstack/webtest/: index.css  index.html  stylesheet1.css
IT & Cyber/etc/: misc.py
PRODIGY/: prodigy.py
Prime Checker/: Cargo.toml
awlibs/: amundworks_general_function_library.py  amundworks_mathematics_library.py
c/: ctest.c
c++/openGL/: CMakeLists.txt
c++/openGL/src/: main.cpp
c_/: csandbox.c
dyson/: DysonSphere.py  credentials.txt
futureforge_I/: devlogs.md  fusion_anvil.py
main.c/: csandbox.c
main.html/: dysonsphere.html
main.html_css/: ATAI.css  ATAI.html  aatc.css  aatc.html  aws.css  aws.html
python_/: mandelbrot.py  new.py  normaldistribution.py  sandbox.py  sierpinski.py  unical.py
rust_/: Cargo.toml
tango/: TANGO_I.py  tangocred.txt
(+47 files in other folders)
